BUGFIX/HCMPRE-2343: Status was updating when we refresh (#2230)
* Fixed scrollbar and registers approval bug

* fixed status issue

* Updated css version

---------

--- a/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/payment.scss
+++ b/health/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/payment.scss
@@ -61,7 +61,7 @@
 
 /* Filter Section - Fixed to 30% Width */
 .custom-register-inbox-screen .custom-inbox-filter-section {
-    flex: 0 0 30%;
+    flex: 0 0 20%;
     /* Fixes width to 30%, prevents unwanted expansion */
     display: flex;
     flex-direction: column;
